--- a/AnotherDuplicatelol/src/namesayer/databaseView.fxml
+++ b/AnotherDuplicatelol/src/namesayer/databaseView.fxml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.DatabaseViewController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.databaseViewController">
    <children>
-      <Label layoutX="17.0" layoutY="14.0" text="Names Database">
+      <Label alignment="CENTER" layoutX="1.0" layoutY="28.0" prefHeight="37.0" prefWidth="403.0" text="Names Database">
          <font>
-            <Font name="System Bold" size="28.0" />
+            <Font name="System Bold" size="30.0" />
          </font>
+         <padding>
+            <Insets bottom="10.0" />
+         </padding>
       </Label>
-      <ListView fx:id="listView" layoutX="15.0" layoutY="116.0" prefHeight="433.0" prefWidth="270.0" />
-      <Button fx:id="addButton" layoutX="165.0" layoutY="561.0" mnemonicParsing="false" onAction="#add" text="Add Recordings" />
-      <Button fx:id="backButton" layoutX="14.0" layoutY="561.0" mnemonicParsing="false" onAction="#back" text="Back" />
-      <TextField fx:id="searchField" layoutX="15.0" layoutY="85.0" prefHeight="10.0" prefWidth="270.0" />
-      <Label layoutX="79.0" layoutY="56.0" text="Search for names">
+      <ListView fx:id="listView" layoutX="34.0" layoutY="149.0" prefHeight="465.0" prefWidth="330.0" />
+      <Button fx:id="addButton" layoutX="224.0" layoutY="633.0" mnemonicParsing="false" text="Add Recordings">
          <font>
             <Font size="16.0" />
+         </font></Button>
+      <Button fx:id="backButton" layoutX="32.0" layoutY="632.0" mnemonicParsing="false" text="Back">
+         <font>
+            <Font size="16.0" />
+         </font></Button>
+      <TextField fx:id="searchField" layoutX="37.0" layoutY="112.0" prefHeight="34.0" prefWidth="327.0" />
+      <Label alignment="CENTER" layoutX="3.0" layoutY="73.0" prefHeight="23.0" prefWidth="389.0" text="Search for names">
+         <font>
+            <Font size="18.0" />
          </font>
       </Label>
    </children>
