--- a/AnotherDuplicatelol/src/namesayer/startMenu.fxml
+++ b/AnotherDuplicatelol/src/namesayer/startMenu.fxml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.StartMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.StartMenuController">
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Name Sayer">
                <font>
-                  <Font size="96.0" />
+                  <Font size="100.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
             </Label>
-            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" prefWidth="200.0" text="Practice">
+            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" prefHeight="45.0" prefWidth="239.0" text="Practice">
                <font>
-                  <Font size="20.0" />
+                  <Font size="24.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="testButton" mnemonicParsing="false" onAction="#testMicrophone" prefHeight="45.0" prefWidth="242.0" text="Test Microphone">
+               <font>
+                  <Font size="24.0" />
                </font>
             </Button>
-            <Button fx:id="testButton" mnemonicParsing="false" onAction="#testMicrophone" prefWidth="200.0" text="Test Microphone">
+            <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quit" prefHeight="45.0" prefWidth="243.0" text="Quit">
                <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quit" prefWidth="200.0" text="Quit">
-               <font>
-                  <Font size="20.0" />
+                  <Font size="24.0" />
                </font>
             </Button>
          </children>
