--- a/AnotherDuplicatelol/src/namesayer/testMicrophone.fxml
+++ b/AnotherDuplicatelol/src/namesayer/testMicrophone.fxml
@@ -11,33 +11,40 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.TestMicrophoneController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.TestMicrophoneController">
    <children>
       <VBox alignment="CENTER" layoutX="243.0" layoutY="110.0" prefHeight="500.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox prefHeight="25.0" prefWidth="700.0">
-               <children>
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
-               </children>
                <padding>
                   <Insets left="30.0" />
                </padding>
                <VBox.margin>
-                  <Insets top="30.0" />
+                  <Insets bottom="10.0" left="20.0" top="20.0" />
                </VBox.margin>
+               <children>
+                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text="Back">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Button>
+               </children>
             </HBox>
             <Label text="Test Your Microphone">
                <font>
-                  <Font size="36.0" />
+                  <Font name="System Bold" size="36.0" />
                </font>
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="44.0" prefWidth="548.0" text="Press Test to start the microphone test. You should see a blue bar moving as you speak.">
+            <Label prefHeight="44.0" prefWidth="690.0" text="Press Test to start the microphone test. You should see a blue bar moving as you speak.">
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
-               </VBox.margin></Label>
+               </VBox.margin>
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
             <ImageView fitHeight="155.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Resources/Mic.png" />
