--- a/AnotherDuplicatelol/src/namesayer/uploadScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/uploadScreen.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -15,17 +11,63 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="47.0" layoutY="137.0" prefHeight="207.0" prefWidth="348.0">
+      <VBox alignment="CENTER" layoutX="516.0" layoutY="43.0" prefHeight="555.0" prefWidth="345.0" spacing="10.0">
+         <children>
+            <Label prefHeight="23.0" prefWidth="321.0" text="Names in File:">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ListView fx:id="nameListView" prefHeight="498.0" prefWidth="325.0">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </ListView>
+            <HBox prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+               <children>
+                  <CheckBox mnemonicParsing="false" text="Randomise">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </CheckBox>
+                  <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="32.0" prefWidth="156.0" text="Practice Names">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </HBox>
+         </children>
+      </VBox>
+      <Button fx:id="backButton" layoutX="52.0" layoutY="38.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <VBox alignment="TOP_CENTER" layoutX="48.0" layoutY="166.0" prefHeight="337.0" prefWidth="443.0">
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="44.0" prefWidth="329.0" text="Upload File">
                <font>
-                  <Font size="36.0" />
+                  <Font name="System Bold" size="36.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
             </Label>
-            <Label text="Choose a file with names you want to practice" />
-            <Label prefHeight="18.0" prefWidth="329.0" text="Select file:">
+            <Label text="Choose a file with names you want to practice">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Label>
+            <Label prefHeight="20.0" prefWidth="342.0" text="Select file:">
                <VBox.margin>
                   <Insets bottom="5.0" top="30.0" />
                </VBox.margin>
@@ -33,9 +75,9 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <HBox prefHeight="46.0" prefWidth="334.0">
+            <HBox alignment="CENTER" prefHeight="46.0" prefWidth="334.0">
                <children>
-                  <TextField fx:id="fileText" prefHeight="32.0" prefWidth="233.0" promptText="No File Chosen">
+                  <TextField fx:id="fileText" prefHeight="32.0" prefWidth="269.0" promptText="No File Chosen">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin>
@@ -56,33 +98,9 @@
                </VBox.margin>
             </Button>
          </children>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
       </VBox>
-      <VBox alignment="CENTER" layoutX="409.0" prefHeight="500.0" prefWidth="257.0" spacing="10.0">
-         <children>
-            <Label prefHeight="23.0" prefWidth="246.0" text="Names in File:">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <ListView fx:id="nameListView" prefHeight="351.0" prefWidth="251.0">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </ListView>
-            <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="32.0" prefWidth="111.0" text="Continue">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-      <Button fx:id="backButton" layoutX="52.0" layoutY="38.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
