--- a/AnotherDuplicatelol/src/namesayer/uploadWarning.fxml
+++ b/AnotherDuplicatelol/src/namesayer/uploadWarning.fxml
@@ -9,32 +9,38 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="350.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadWarningController">
+<AnchorPane prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadWarningController">
    <children>
       <BorderPane layoutX="67.0" layoutY="42.0" prefHeight="350.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label text="Name(s) not found!">
+                  <Label text="Name(s) not found">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                      <VBox.margin>
-                        <Insets bottom="15.0" />
+                        <Insets bottom="10.0" top="20.0" />
                      </VBox.margin>
                   </Label>
                   <Label text="The following names could not be generated" />
-                  <Label prefHeight="17.0" prefWidth="257.0" text="Names not found are shown in brackets.">
+                  <Label prefHeight="17.0" prefWidth="316.0" text="Names that were not found are shown in brackets.">
                      <VBox.margin>
                         <Insets bottom="15.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="notFoundListView" prefHeight="175.0" prefWidth="360.0">
+                  <ListView fx:id="notFoundListView" prefHeight="163.0" prefWidth="330.0">
                      <VBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="20.0" />
+                        <Insets bottom="10.0" left="25.0" right="25.0" />
                      </VBox.margin>
                   </ListView>
-                  <Button fx:id="okButton" mnemonicParsing="false" onAction="#okButtonClicked" text="OK" />
+                  <Button fx:id="okButton" mnemonicParsing="false" onAction="#okButtonClicked" text="OK">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="20.0" top="10.0" />
+                     </VBox.margin></Button>
                </children>
                <padding>
                   <Insets top="20.0" />
