--- a/AnotherDuplicatelol/src/namesayer/workspace.fxml
+++ b/AnotherDuplicatelol/src/namesayer/workspace.fxml
@@ -16,15 +16,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
    <children>
-      <Pane layoutX="-6.0" prefHeight="500.0" prefWidth="700.0">
+      <Pane layoutX="-6.0" prefHeight="600.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox alignment="CENTER" layoutX="308.0" layoutY="100.0" prefHeight="373.0" prefWidth="350.0" spacing="15.0">
+            <VBox alignment="TOP_CENTER" layoutX="396.0" layoutY="137.0" prefHeight="434.0" prefWidth="505.0" spacing="15.0">
                <children>
-                  <Label fx:id="playingLabel" alignment="CENTER" prefHeight="21.0" prefWidth="350.0" text="Now Playing: Demo Recording (Database)" textAlignment="CENTER">
+                  <Label fx:id="playingLabel" alignment="CENTER" prefHeight="23.0" prefWidth="376.0" text="Now Playing: Demo Recording (Database)" textAlignment="CENTER">
                      <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
                   <Label fx:id="recordingNameLabel" alignment="CENTER" prefHeight="104.0" prefWidth="350.0">
@@ -36,15 +36,27 @@
                   <Label fx:id="ratingLabel" />
                   <HBox alignment="CENTER" prefHeight="35.0" prefWidth="350.0" spacing="10.0">
                      <children>
-                        <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Previous" />
-                        <Button fx:id="playButton" alignment="CENTER" mnemonicParsing="false" onAction="#playButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Play" />
-                        <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Next" />
+                        <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" prefHeight="35.0" prefWidth="97.0" text="Previous">
+                           <font>
+                              <Font size="16.0" />
+                           </font></Button>
+                        <Button fx:id="playButton" alignment="CENTER" mnemonicParsing="false" onAction="#playButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Play">
+                           <font>
+                              <Font size="16.0" />
+                           </font></Button>
+                        <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Next">
+                           <font>
+                              <Font size="16.0" />
+                           </font></Button>
                      </children>
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                   </HBox>
-                  <Button fx:id="toggleButton" mnemonicParsing="false" onAction="#toggleTab" prefHeight="35.0" prefWidth="80.0" text="Toggle" />
+                  <Button fx:id="toggleButton" mnemonicParsing="false" onAction="#toggleTab" prefHeight="35.0" prefWidth="80.0" text="Toggle">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Button>
                   <HBox alignment="CENTER" prefHeight="35.0" prefWidth="334.0">
                      <children>
                         <ImageView fitHeight="27.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -52,15 +64,21 @@
                               <Image url="@../Resources/Speaker.png" />
                            </image>
                         </ImageView>
-                        <Slider fx:id="volumeSlider" blockIncrement="0.1" max="1.0" prefHeight="26.0" prefWidth="106.0">
+                        <Slider fx:id="volumeSlider" blockIncrement="0.1" max="1.0" prefHeight="26.0" prefWidth="172.0">
                            <HBox.margin>
                               <Insets left="5.0" right="15.0" />
                            </HBox.margin></Slider>
                         <Button fx:id="recordButton" mnemonicParsing="false" onAction="#recordButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Record">
                            <HBox.margin>
                               <Insets right="15.0" />
-                           </HBox.margin></Button>
-                        <Button fx:id="rateButton" mnemonicParsing="false" onAction="#rateButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Rate" />
+                           </HBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font></Button>
+                        <Button fx:id="rateButton" mnemonicParsing="false" onAction="#rateButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Rate">
+                           <font>
+                              <Font size="16.0" />
+                           </font></Button>
                      </children>
                      <VBox.margin>
                         <Insets top="20.0" />
@@ -68,20 +86,20 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox layoutX="34.0" layoutY="21.0" prefHeight="464.0" prefWidth="250.0" spacing="5.0">
+            <VBox layoutX="48.0" layoutY="97.0" prefHeight="474.0" prefWidth="344.0" spacing="5.0">
                <children>
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text=" Edit play queue">
+                  <HBox alignment="TOP_RIGHT" prefHeight="36.0" prefWidth="344.0" spacing="120.0">
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets top="10.0" />
                      </VBox.margin>
-                  </Button>
-                  <TabPane fx:id="tabPane" prefHeight="362.0" prefWidth="250.0" tabClosingPolicy="UNAVAILABLE">
+                  </HBox>
+                  <TabPane fx:id="tabPane" prefHeight="429.0" prefWidth="344.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
                       <Tab text="Demo's">
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <ListView fx:id="dataListView" prefHeight="358.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <ListView fx:id="dataListView" layoutY="5.0" prefHeight="413.0" prefWidth="344.0" AnchorPane.bottomAnchor="-3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" />
                                  </children>
                               </AnchorPane>
                         </content>
@@ -97,16 +115,42 @@
                       </Tab>
                     </tabs>
                   </TabPane>
-                  <HBox alignment="BOTTOM_LEFT" prefHeight="25.0" prefWidth="200.0" spacing="50.0">
+                  <HBox prefHeight="25.0" prefWidth="200.0" spacing="10.0">
                      <children>
-                        <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToStart" text="Return to menu" />
-                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#creationDeleteButtonClicked" text="Delete" />
+                        <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" prefHeight="32.0" prefWidth="113.0" text="Edit playlist">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#creationDeleteButtonClicked" prefHeight="32.0" prefWidth="71.0" text="Delete">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="32.0" prefWidth="60.0" text="Save">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Button>
                      </children>
                   </HBox>
                </children>
             </VBox>
-            <Button fx:id="loopButton" layoutX="599.0" layoutY="31.0" mnemonicParsing="false" text="Loop" />
-            <Button fx:id="saveButton" layoutX="545.0" layoutY="31.0" mnemonicParsing="false" text="Save" />
+            <Button fx:id="loopButton" layoutX="722.0" layoutY="43.0" mnemonicParsing="false" text="Loop Practice">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="returnButton" layoutX="49.0" layoutY="41.0" mnemonicParsing="false" onAction="#returnToStart" prefHeight="32.0" prefWidth="161.0" text="Return to menu">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Label layoutX="353.0" layoutY="42.0" prefHeight="17.0" prefWidth="260.0" text="Play Names">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
