--- a/AnotherDuplicatelol/src/namesayer/databaseView.fxml
+++ b/AnotherDuplicatelol/src/namesayer/databaseView.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.databaseViewController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.DatabaseViewController">
    <children>
       <Label alignment="CENTER" layoutX="1.0" layoutY="28.0" prefHeight="37.0" prefWidth="403.0" text="Names Database">
          <font>
@@ -19,11 +24,11 @@
          </padding>
       </Label>
       <ListView fx:id="listView" layoutX="34.0" layoutY="149.0" prefHeight="465.0" prefWidth="330.0" />
-      <Button fx:id="addButton" layoutX="224.0" layoutY="633.0" mnemonicParsing="false" text="Add Recordings">
+      <Button fx:id="addButton" layoutX="224.0" layoutY="633.0" mnemonicParsing="false" onAction="#add" text="Add Recordings">
          <font>
             <Font size="16.0" />
          </font></Button>
-      <Button fx:id="backButton" layoutX="32.0" layoutY="632.0" mnemonicParsing="false" text="Back">
+      <Button fx:id="backButton" layoutX="32.0" layoutY="632.0" mnemonicParsing="false" onAction="#back" text="Back">
          <font>
             <Font size="16.0" />
          </font></Button>
