--- a/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,14 +15,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-border-image-width: 10;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PlaylistController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-border-image-width: 10;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PlaylistController">
    <children>
-      <Button fx:id="practiceButton" layoutX="601.0" layoutY="125.0" mnemonicParsing="false" onAction="#practiceButtonClicked" prefHeight="46.0" prefWidth="127.0" text="New practice">
+      <Button fx:id="practiceButton" layoutX="590.0" layoutY="126.0" mnemonicParsing="false" onAction="#practiceButtonClicked" prefHeight="46.0" prefWidth="127.0" text="New practice">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="uploadButton" layoutX="742.0" layoutY="126.0" mnemonicParsing="false" onAction="#uploadButtonClicked" prefHeight="46.0" prefWidth="119.0" text="Upload File">
+      <Button fx:id="uploadButton" layoutX="730.0" layoutY="126.0" mnemonicParsing="false" onAction="#uploadButtonClicked" prefHeight="46.0" prefWidth="119.0" text="Upload File">
          <font>
             <Font size="16.0" />
          </font>
@@ -36,15 +41,15 @@
             <Font name="System Bold" size="40.0" />
          </font>
       </Label>
-      <Pane layoutY="170.0" prefHeight="436.0" prefWidth="916.0">
+      <Pane layoutY="170.0" prefHeight="430.0" prefWidth="900.0">
          <children>
-            <HBox layoutX="55.0" layoutY="34.0" prefHeight="389.0" prefWidth="801.0">
+            <HBox prefHeight="430.0" prefWidth="900.0">
                <children>
-                  <VBox prefHeight="386.0" prefWidth="250.0" spacing="20.0">
+                  <VBox prefHeight="430.0" prefWidth="250.0">
                      <children>
-                        <StackPane prefHeight="169.0" prefWidth="249.0">
+                        <StackPane prefHeight="170.0" prefWidth="250.0">
                            <children>
-                              <Button fx:id="playlist1" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="249.0">
+                              <Button fx:id="playlist1" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -58,27 +63,33 @@
                                  </StackPane.margin>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
                         </StackPane>
-                        <StackPane prefHeight="171.0" prefWidth="249.0">
+                        <StackPane prefHeight="170.0" prefWidth="250.0">
                            <children>
-                              <Button fx:id="playlist4" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="249.0" />
+                              <Button fx:id="playlist4" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
                               <Button fx:id="delete4" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
                                  <StackPane.margin>
                                     <Insets />
                                  </StackPane.margin>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
                         </StackPane>
                      </children>
                      <HBox.margin>
-                        <Insets right="20.0" />
+                        <Insets left="50.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox prefHeight="386.0" prefWidth="273.0" spacing="20.0">
+                  <VBox prefHeight="430.0" prefWidth="250.0">
                      <children>
-                        <StackPane prefHeight="171.0" prefWidth="272.0">
+                        <StackPane prefHeight="170.0" prefWidth="250.0">
                            <children>
-                              <Button fx:id="playlist2" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="272.0">
+                              <Button fx:id="playlist2" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -89,45 +100,60 @@
                                  </StackPane.margin>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
                         </StackPane>
-                        <StackPane prefHeight="171.0" prefWidth="272.0">
+                        <StackPane prefHeight="170.0" prefWidth="250.0">
                            <children>
-                              <Button fx:id="playlist5" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="272.0" />
+                              <Button fx:id="playlist5" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
                               <Button fx:id="delete5" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
                                  <StackPane.margin>
                                     <Insets />
                                  </StackPane.margin>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
                         </StackPane>
                      </children>
                      <HBox.margin>
-                        <Insets right="15.0" />
+                        <Insets left="25.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox prefHeight="386.0" prefWidth="247.0" spacing="20.0">
+                  <VBox prefHeight="430.0" prefWidth="250.0">
                      <children>
-                        <StackPane prefHeight="171.0" prefWidth="246.0">
+                        <StackPane prefHeight="170.0" prefWidth="250.0">
                            <children>
-                              <Button fx:id="playlist3" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="168.0" prefWidth="246.0" />
+                              <Button fx:id="playlist3" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
                               <Button fx:id="delete3" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
                                  <StackPane.margin>
                                     <Insets />
                                  </StackPane.margin>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
                         </StackPane>
-                        <StackPane prefHeight="171.0" prefWidth="246.0">
+                        <StackPane prefHeight="170.0" prefWidth="250.0">
                            <children>
-                              <Button fx:id="playlist6" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="171.0" prefWidth="246.0" />
+                              <Button fx:id="playlist6" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
                               <Button fx:id="delete6" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
                                  <StackPane.margin>
                                     <Insets />
                                  </StackPane.margin>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
                         </StackPane>
                      </children>
+                     <HBox.margin>
+                        <Insets left="25.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
