--- a/AnotherDuplicatelol/src/namesayer/uploadScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/uploadScreen.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -11,37 +16,37 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadController">
    <children>
-      <VBox alignment="CENTER" layoutX="516.0" layoutY="43.0" prefHeight="555.0" prefWidth="345.0" spacing="10.0">
+      <VBox alignment="CENTER" layoutX="508.0" layoutY="43.0" prefHeight="555.0" prefWidth="353.0" spacing="10.0">
          <children>
             <Label prefHeight="23.0" prefWidth="321.0" text="Names in File:">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <ListView fx:id="nameListView" prefHeight="498.0" prefWidth="325.0">
+            <ListView fx:id="nameListView" prefHeight="444.0" prefWidth="333.0">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
             </ListView>
-            <HBox prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+            <VBox alignment="TOP_CENTER" prefHeight="105.0" prefWidth="353.0" spacing="15.0">
                <children>
-                  <CheckBox mnemonicParsing="false" text="Randomise">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </CheckBox>
-                  <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="32.0" prefWidth="156.0" text="Practice Names">
+                  <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="32.0" prefWidth="151.0" text="Practice Names">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Button>
+                  <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="22.0" prefWidth="177.0" text="Randomise Order">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </CheckBox>
                </children>
                <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
+                  <Insets />
                </VBox.margin>
-            </HBox>
+            </VBox>
          </children>
       </VBox>
       <Button fx:id="backButton" layoutX="52.0" layoutY="38.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back">
